# seo-maximus

./: .env.example  .gitignore  Dockerfile  README.md  env.example  pyproject.toml
app/: __init__.py  main.py
app/api/: dependencies.py  router.py
app/api/routes/: __init__.py  critical_css.py  images.py
app/core/: config.py  logging.py
app/models/: critical_css.py  image.py  job.py
app/services/: __init__.py  critical_css.py  image_optimizer.py  job_store.py  mobile_hero_detector.py
app/tasks/: __init__.py  css_tasks.py  image_tasks.py
app/web/: __init__.py
app/web/static/: app.js  style.css
app/web/templates/: index.html
app/worker/: celery_app.py
docker/: dev.Dockerfile  docker-compose.dev.yml
docs/: tech-spec-mvp.md
tests/: test_smoke.py
