[project]
name = "seo-maximus-backend"
version = "0.1.0"
description = "Backend services for SEO Maximus performance optimization MVP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LicenseRef-Proprietary" }
authors = [
  { name = "Nemanja Tanaskovic" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "jinja2>=3.1.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.0",
  "celery>=5.3.6",
  "redis>=5.0.4",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "tenacity>=8.3.0",
  "python-dotenv>=1.0.1",
  "playwright>=1.45.0",
  "csscompressor>=0.9.5",
  "tinify>=1.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=4.1.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-redis>=4.6.0.20240425",
  "types-requests>=2.31.0.20240405"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["docker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "--strict-markers"
pythonpath = ["app"]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

